fixed home column spacing

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,14 @@ body {
     background-position: center;
 }
 
+/* Image spacing */
+img {
+    width: 300px; 
+    height: 300px;
+    object-fit: cover;
+}
+
+
 
 
 /* Spacing and center alignment for links */
